--- a/templates/statistics/machine-main.html
+++ b/templates/statistics/machine-main.html
@@ -1,4 +1,7 @@
-<h1>{{hostname}} {{#hostname}}–{{/hostname}} {{clientip}}</h1>
+<h1>
+	{{hostname}} {{#hostname}}–{{/hostname}} {{clientip}}
+	{{#notes}}<a href="#usernotes"><span class="glyphicon glyphicon-exclamation-sign"></span></a>{{/notes}}
+</h1>
 
 <div class="row">
 	<div class="col-md-6">
