--- a/templates/tm-callback-trigger.html
+++ b/templates/tm-callback-trigger.html
@@ -11,5 +11,5 @@
 				setTimeout(slxCheckCallbacks, (slxCbCooldown + 1) * 1500);
 		}, 'text');
 	}
-	setTimeout(slxCheckCallbacks, 500);
+	document.addEventListener("DOMContentLoaded", slxCheckCallbacks, false);
 </script>
