--- a/templates/statistics/kvmstate.html
+++ b/templates/statistics/kvmstate.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="panel-body">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<table class="table table-condensed table-striped">
 						<tr>
 							<th>{{lang_kvmState}}</th>
@@ -19,7 +19,7 @@
 						{{/rows}}
 					</table>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<canvas id="kvmchart" style="width:100%;height:250px"></canvas>
 					<script type="text/javascript">
 						document.addEventListener("DOMContentLoaded", function() {
