--- a/templates/page-adduser.html
+++ b/templates/page-adduser.html
@@ -1,4 +1,6 @@
 <form class="form-adduser" action="?do=AddUser" method="post">
+	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="display:none;">
+	<input type="password" name="password_fake" id="password_fake" value="" style="display:none;">
 	<h2 class="form-signin-heading">{{lang_createUser}}</h2>
 	<div class="row">
 		<div class="col-md-4">{{lang_username}} *</div>
