--- a/templates/page-vmstore.html
+++ b/templates/page-vmstore.html
@@ -1,4 +1,6 @@
 <form role="form" method="post" action="?do=VmStore">
+	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="display:none;">
+	<input type="password" name="password_fake" id="password_fake" value="" style="display:none;">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="action" value="setstore">
 	<div class="panel panel-default">
