--- a/templates/serversetup/ipxe.html
+++ b/templates/serversetup/ipxe.html
@@ -1,4 +1,6 @@
 <form method="post" action="?do=ServerSetup">
+	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="display:none;">
+	<input type="password" name="password_fake" id="password_fake" value="" style="display:none;">
 	<input type="hidden" name="action" value="ipxe">
 	<input type="hidden" name="token" value="{{token}}">
 	<div class="panel panel-default">
