[statistics] Smart values, show last log lines, location support

--- a/templates/statistics/cpumodels.html
+++ b/templates/statistics/cpumodels.html
@@ -1,21 +1,23 @@
 <div class="col-md-12">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			{{lang_cpuStats}}
+			{{lang_modelStats}}
 		</div>
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-md-8">
 					<table class="table table-condensed table-striped">
 						<tr>
-							<th>{{lang_cpuName}}</th>
+							<th>{{lang_modelName}}</th>
 							<th class="text-right">{{lang_cpuCores}}</th>
-							<th class="text-right">{{lang_cpuCount}}</th>
+							<th class="text-right">{{lang_modelCount}}</th>
 						</tr>
 						{{#rows}}
 						<tr id="{{id}}">
-							<td class="text-left slx-nowrap"><a href="?do=Statistics&amp;filter=cpumodel&amp;argument={{urlcpumodel}}">{{cpumodel}}</a></td>
-							<td class="text-right"><a href="?do=Statistics&amp;filter=realcores&amp;argument={{realcores}}">{{realcores}}</a></td>
+							<td class="text-left slx-nowrap">
+								<a href="?do=Statistics&amp;filter=systemmodel&amp;argument={{urlsystemmodel}}">{{systemmodel}}</a>
+							</td>
+							<td class="text-right"><a href="?do=Statistics&amp;filter=realcores&amp;argument={{cores}}">{{cores}}</a></td>
 							<td class="text-right">{{count}}</td>
 						</tr>
 						{{/rows}}
@@ -27,7 +29,7 @@
 						document.addEventListener("DOMContentLoaded", function() {
 							var data = {{{json}}};
 							var sel = false;
-							new Chart(document.getElementById('cpumodelchart').getContext('2d')).Pie(data, { 
+							new Chart(document.getElementById('cpumodelchart').getContext('2d')).Pie(data, {
 								animation: false,
 								tooltipTemplate: "<%if (label){%><%=label%><%}%>",
 								customTooltips: function(tooltip) {
