--- a/templates/sysconfig/ad_ldap-checkconnection.html
+++ b/templates/sysconfig/ad_ldap-checkconnection.html
@@ -19,6 +19,7 @@
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
+		<input name="homeattr" value="{{homeattr}}" type="hidden">
 		{{#ssl}}
 		<input name="ssl" value="on" type="hidden">
 		<input type="hidden" name="certificate" value="{{certificate}}">
@@ -37,6 +38,7 @@
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
+		<input name="homeattr" value="{{homeattr}}" type="hidden">
 		{{#ssl}}
 		<input id="ssl" name="ssl" value="on" type="hidden">
 		<input id="fingerprint" name="fingerprint" value="" type="hidden">
