--- a/templates/sysconfig/ad-selfsearch.html
+++ b/templates/sysconfig/ad-selfsearch.html
@@ -5,6 +5,10 @@
 <div id="zeug">
 	<div data-tm-id="{{self-search}}" data-tm-log="messages" data-tm-callback="selfCb">LDAP Self-Query</div>
 	<pre style="display:none" id="result"></pre>
+	<div style="display:none" id="haselect">
+		<div class="slx-bold">{{lang_selectHomeAttribute}}</div>
+		{{lang_homeAttributeExplanation}}
+	</div>
 </div>
 <i>{{lang_onProblemSearchBase}}</i>
 <br><br>
@@ -18,6 +22,7 @@
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
+		<input name="homeattr" value="{{homeattr}}" type="hidden">
 		{{#ssl}}
 		<input name="ssl" value="on" type="hidden">
 		<input type="hidden" name="certificate" value="{{certificate}}">
@@ -36,13 +41,13 @@
 		<input id="fulldn" name="binddn" value="" type="hidden">
 		<input id="givendn" name="originalbinddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
-		<input name="home" value="{{home}}" type="hidden">
+		<input id="home" name="home" value="{{home}}" type="hidden">
+		<input id="homeattr" name="homeattr" value="{{homeattr}}" type="hidden">
 		{{#ssl}}
 		<input name="ssl" value="on" type="hidden">
 		<input type="hidden" name="certificate" value="{{certificate}}">
 		{{/ssl}}
 		<input name="fingerprint" value="{{fingerprint}}" type="hidden">
-		<input name="originalbinddn" value="{{binddn}}" type="hidden">
 		<button id="nextbutton" type="submit" class="btn btn-primary" style="display:none">{{lang_skip}} &raquo;</button>
 	</form>
 </div>
@@ -66,14 +71,42 @@
 			}
 			$('#fulldn').val(fulldn);
 			$('#result').text("BindDN: " + fulldn + "\nWinDomain: " + domain + "\nSearchBase: " + search).show();
-			if (typeof search !== 'string' || search.length === 0 || search.length + 2 >= fulldn.length) {
+			var attrlist = [];
+			var tryHomeAttr = false;
+			{{#tryHomeAttr}}
+			tryHomeAttr = true;
+			if (task.data.home && task.data.home.length) attrlist = task.data.home;
+			{{/tryHomeAttr}}
+			if (typeof search !== 'string' || search.length === 0 || search.length + 2 >= fulldn.length
+					  || (tryHomeAttr && $('#home').val().length === 0 && $('#homeattr').val().length === 0 && attrlist.length === 0)) {
 				$('#nextbutton').html('{{lang_continueAnyway}}');
+			} else if (attrlist.length > 1 && $('#homeattr').val().length === 0) {
+				var sel = $('<select>').attr('onchange', 'slxSetHomeAttr(this)').addClass('form-control');
+				var best = 0;
+				for (var i = 1; i < attrlist.length; ++i) {
+					if (attrlist[i].score > attrlist[best].score) best = i;
+				}
+				for (var i = 0; i < attrlist.length; ++i) {
+					var opt = $('<option>').attr('value', attrlist[i].attr).text(attrlist[i].attr + ' (' + attrlist[i].value + ')');
+					if (i === best) opt.attr('selected', 'selected');
+					sel.append(opt);
+				}
+				$('#haselect').append(sel).append('<br>').show();
+				slxSetHomeAttr(sel[0]);
+				$('#nextbutton').html('{{lang_next}}');
 			} else {
+				if (attrlist.length === 1 && $('#homeattr').val().length === 0) {
+					$('#homeattr').val(attrlist[0].attr);
+				}
 				$('#nextform').submit();
 			}
 		} else {
 			$('#nextbutton').html('{{lang_continueAnyway}}');
 		}
 		$('#nextbutton').show();
+	}
+	
+	function slxSetHomeAttr(sel) {
+		$('#homeattr').val(sel.options[sel.selectedIndex].value);
 	}
 </script>
