--- a/templates/sysconfig/ad_ldap-checkcredentials.html
+++ b/templates/sysconfig/ad_ldap-checkcredentials.html
@@ -17,6 +17,7 @@
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
+		<input name="homeattr" value="{{homeattr}}" type="hidden">
 		{{#ssl}}
 		<input name="ssl" value="on" type="hidden">
 		<input type="hidden" name="certificate" value="{{certificate}}">
@@ -35,6 +36,7 @@
 		<input name="binddn" value="{{binddn}}" type="hidden">
 		<input name="bindpw" value="{{bindpw}}" type="hidden">
 		<input name="home" value="{{home}}" type="hidden">
+		<input name="homeattr" value="{{homeattr}}" type="hidden">
 		{{#ssl}}
 		<input name="ssl" value="on" type="hidden">
 		<input type="hidden" name="certificate" value="{{certificate}}">
