--- a/modules/serversetup/templates/ipaddress.html
+++ b/modules/serversetup/templates/ipaddress.html
@@ -1,3 +1,4 @@
+<a class="btn btn-default" href="?do=Serversetup&amp;advanced=false" role="button"><strong>{{lang_ipxeSmp}}</strong></a></br></br>
 <div class="panel panel-default">
 	<div class="panel-heading">
 		{{lang_bootAddress}}
