--- a/modules/support/templates/page-support.html
+++ b/modules/support/templates/page-support.html
@@ -5,34 +5,26 @@
     </div>
     <!-- //FAQ -->
     <div class="panel-body" id="accordion" role="tablist" aria-multiselectable="true">
-       <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingOne">
+
+      {{#faq}}
+      {{#highlight}}
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="heading{{order}}">
              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    {{lang_faq#1}}
+                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{order}}" aria-expanded="false" aria-controls="collapse{{order}}">
+                    {{question}}
                 </a>
              </h4>
           </div>
-          <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+          <div id="collapse{{order}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{order}}">
               <div class="panel-body">
-                  {{lang_content#1}}
+                  {{answer}}
              </div>
-          </div>
-       </div>
-       <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingTwo">
-             <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    {{lang_faq#2}}
-                </a>
-             </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-              <div class="panel-body">
-                  {{lang_content#2}}
-            </div>
-          </div>
-       </div>
+         </div>
+        </div>
+       {{/highlight}}
+      {{/faq}}
+
    <a class="btn btn-default" href="?do=Support&amp;showfaq=true" role="button"><strong>{{lang_showall}}</strong></a>
    </div>
 </div>
