Translating module strings and custom sections works

--- a/modules-available/translation/templates/module-list.html
+++ b/modules-available/translation/templates/module-list.html
@@ -1,11 +1,5 @@
-<div class="panel panel-default">
-	<div class="panel-heading">
-		{{lang_langAdministration}}
-	</div>
-	<div class="panel-body">
-		<p>{{lang_adminInfo}}</p>
-	</div>
-</div>
+<h1>{{lang_translationHeading}}</h1>
+
 <div class="panel panel-default">
 	<table class="table">
 		<thead>
